<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SubmitActivity">

    <include
        layout="@layout/submit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/project_submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/brown" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="@drawable/gradient_line"
        android:src="@drawable/gradient_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:hint="@string/last_name" />

    </LinearLayout>




    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/project_on_githun_link"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submit_post"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/submit_button"
        android:text="@string/submit"
        android:textColor="@color/white" />


</LinearLayout>